--- a/main/templates/home/home_page.html
+++ b/main/templates/home/home_page.html
@@ -49,7 +49,10 @@ table, th, td {
     <br>
     <h4>Degree Program</h4>
     <select name="degree-program" class="form-control col-9" title="" required id="id_degree-program">
-    <option value="" selected>---------</option></select>
+    {% for degreePrograms in showdegrees %}
+    <option value="" selected>{{ degreePrograms.name}}</option>
+    {% endfor %}
+    </select>
     <br>
     <ul class="list-group">  
       {% buttons %}
