--- a/main/templates/home/home_page.html
+++ b/main/templates/home/home_page.html
@@ -45,11 +45,14 @@ table, th, td {
   <div class="p-2">
     <h4>Department</h4>
     <select name="department" class="form-control col-9" title="" required id="id_department">
-    <option value="" selected>---------</option></select>
+    {% for departments in showDepartments %}
+    <option value="" selected>{{ departments.name}}</option>
+    {% endfor %}
+    </select>
     <br>
     <h4>Degree Program</h4>
     <select name="degree-program" class="form-control col-9" title="" required id="id_degree-program">
-    {% for degreePrograms in showdegrees %}
+    {% for degreePrograms in showDegrees %}
     <option value="" selected>{{ degreePrograms.name}}</option>
     {% endfor %}
     </select>
