PDF generation starting point

--- a/main/templates/home/home_page.html
+++ b/main/templates/home/home_page.html
@@ -59,7 +59,7 @@ table, th, td {
     <br>
     <ul class="list-group">  
       {% buttons %}
-      <a type="button" class="btn btn-primary" href="#">View Historical Data</a>
+      <a type="button" class="btn btn-primary" href="pdfGen">View Historical Data</a>
       <br><br>
       <a type="button" class="btn btn-primary" href="smartAssistant">Feedback Smart Assistant</a>
       {% endbuttons %}
