--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav id="main-nav-bar">
         <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand mb-0 h1" href="#">Academic Smart Assistant</a>
+            <a class="navbar-brand mb-0 h1" href="/">Academic Smart Assistant</a>
         </nav>
 </nav>
