--- a/main/templates/home/home_page.html
+++ b/main/templates/home/home_page.html
@@ -63,9 +63,9 @@ table, th, td {
     <br>
     <ul class="list-group">  
       {% buttons %}
-      <a type="button" class="btn btn-primary" href="pdfGen">View Historical Data</a>
+      <a type="button" class="btn btn-primary" href="pdfGen" value = "Hist">View Historical Data</a>
       <br><br>
-      <a type="button" class="btn btn-primary" href="smartAssistant">Feedback Smart Assistant</a>
+      <a type="button" class="btn btn-primary" href="smartAssistant" value = "Smart">Feedback Smart Assistant</a>
       {% endbuttons %}
     </ul>
   </div>
