--- a/main/templates/smart_assistant/smart_assistant.html
+++ b/main/templates/smart_assistant/smart_assistant.html
@@ -19,8 +19,8 @@
             </tr>
         
             <tr>
-                <td>SLO Text</td>
-                <td>Feedback on SLO</td>
+                <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">SLO Text</td>
+                <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">Feedback on SLO</td>
             </tr>
        
         </table>
