--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav id="main-nav-bar" >
         <nav class="navbar navbar-dark bg-dark" style="background-color: black; color:black" style="border-bottom:2px red;">
-            <a href="...">
+            <a href="/">
                 <img class="img-responsive" src="https://www.unomaha.edu/university-communications/downloadables/campus-icon-the-o/uno-icon-white.png" height="30px" style="padding:0px">
             </a>
             <a class="navbar-brand mb-0 h1" href="/" style="text-align:left" padding-left="0px" margin-right="0px">Academic Smart Assistant</a>
