Added documentation, simplified usage of traversal view

--- a/main/templates/reports/historical_report.html
+++ b/main/templates/reports/historical_report.html
@@ -16,7 +16,7 @@
 
     <h3>Historical Report Generation</h3>
     <div class="p-2">
-      <form method="post", action="{% url 'traverse' %}">
+      <form method="post", action="{% url 'historical' %}">
         {% csrf_token %}
         <div style="width:50%; display:inline-block;">
         <h4>Department</h4>
