Initial degree comparison pdf generation

--- a/main/templates/reports/historical_report.html
+++ b/main/templates/reports/historical_report.html
@@ -15,6 +15,8 @@
             {% buttons %}
             <a type="button" class="btn btn-primary" href="pdfGen" value = "Hist">View Historical Data</a>
             <br><br>
+            <a type="button" class="btn btn-primary" href="pdfDegreeGen" value = "DegreeComp">View Degree Comparison Data</a>
+            <br><br>
             {% endbuttons %}
           </ul>
     </div>
