Fixed how checkboxes reacted
Check boxes was unavailable when it should have been available and vice versa. This is now fixed.

--- a/main/templates/home/degreeDropdown.html
+++ b/main/templates/home/degreeDropdown.html
@@ -1,3 +1,5 @@
+<option value="" selected hidden>Choose degree program</option>
+<option value="All Programs">All Programs</option>
 {% for degreePrograms in degrees%}
 <option >{{ degreePrograms.name }}</option>
 {% endfor %} 
