Added the html for degree comparisons
fixed the red on the navbar

added the degree comparisons html page

--- a/main/templates/home/home_page.html
+++ b/main/templates/home/home_page.html
@@ -69,6 +69,8 @@ table, th, td {
         {% buttons %}
         <input type="submit" name="historical_woptions" class="btn btn-primary" value = "View Historical Data"></input>
         <br><br>
+        <input type="submit" name="comparisons_woptions" class="btn btn-primary" value = "View Degree Program Comparisons"></input>
+        <br><br>
         <input type="submit" name="smart_woptions" class="btn btn-primary" href="smartAssistant" value = "Feedback Smart Assistant"></input>
         {% endbuttons %}
       </ul>
