--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav id="main-nav-bar" >
-        <nav class="navbar navbar-dark bg-dark" style="background-color: black; color:black" style="border-bottom:2px red;">
+        <nav class="navbar navbar-dark bg-dark" style="background-color: black; color:black; border-bottom:10px solid red;">
             <a href="/">
                 <img class="img-responsive" src="https://www.unomaha.edu/university-communications/downloadables/campus-icon-the-o/uno-icon-white.png" height="30px" style="padding:0px">
             </a>
