--- a/main/templates/reports/degree_program_comparison.html
+++ b/main/templates/reports/degree_program_comparison.html
@@ -16,7 +16,7 @@
 
     <h3>Degree Program Comparisons Report Generation</h3>
     <div class="p-2">
-      <form method="post", action="{% url 'historical' %}">
+      <form method="post", action="{% url 'degreecomparison' %}">
         {% csrf_token %}
         <div style="width:50%; display:inline-block;">
         <h4>Department</h4>
@@ -51,11 +51,7 @@
       --><div style="width:50%; display:inline-block;">
           <h4>Department</h4>
         <select name="department2" class="form-control col-9" title="" required id="id_department2">
-          {% if start_department %}
-            <option value="{{ start_department.pk }}" selected hidden>{{ start_department.name }}</option>
-          {% else %}
             <option value="" selected disabled hidden>Choose a department</option>
-          {% endif %}
           {% for departments in showDepartments %}
             <option value="{{ departments.pk }}" >{{ departments.name }}</option>
           {% endfor %}
@@ -64,11 +60,7 @@
         <br>
         <h4>Degree Program</h4>
         <select name="degree-program2" class="form-control col-9" title="" required id="id_degree-program2">
-          {% if start_degree_program %}
-            <option value="{{ start_degree_program.name }}" selected hidden>{{ start_degree_program }}</option>
-          {% else %}
             <option value="" selected >Choose degree program</option>
-          {% endif %}
           <option value="All Programs">All Programs</option>
           {% for degreePrograms in showDegrees %}
             <option value="" >{{ degreePrograms.name }}</option>
@@ -86,6 +78,8 @@
             {% buttons %}
             <input type="submit" name="gen_pdf" class="btn btn-primary" value = "Generate Report">
             <br><br>
+            <!-- <a type="button" class="btn btn-primary" href="pdfDegreeGen" value = "DegreeComp">View Degree Comparison Data</a>
+            <br><br> -->
             {% endbuttons %}
           </ul>
         </div>
