--- a/main/templates/smart_assistant/smart_assistant.html
+++ b/main/templates/smart_assistant/smart_assistant.html
@@ -11,6 +11,33 @@
 
     <h3>Feedback Smart Assistant</h3>
     <div class="p-2">
+        <h4>Department</h4>
+        <select name="department" class="form-control col-9" title="" required id="id_department">
+          {% if start_department %}
+            <option value="{{ start_department.pk }}" selected hidden>{{ start_department.name }}</option>
+          {% else %}
+            <option value="" selected disabled hidden>Choose a department</option>
+          {% endif %}
+          {% for departments in showDepartments %}
+            <option value="{{ departments.pk }}" >{{ departments.name }}</option>
+          {% endfor %}
+        </select>
+
+        <br>
+        <h4>Degree Program</h4>
+        <select name="degree-program" class="form-control col-9" title="" required id="id_degree-program">
+          {% if start_degree_program %}
+            <option value="{{ start_degree_program.name }}" selected hidden>{{ start_degree_program }}</option>
+          {% else %}
+            <option value="" selected >Choose degree program</option>
+          {% endif %}
+          <option value="All Programs">All Programs</option>
+          {% for degreePrograms in showDegrees %}
+            <option value="" >{{ degreePrograms.name }}</option>
+          {% endfor %}
+        </select>
+
+        <br>
         <table style="width:100%">
 
             <tr>
