--- a/main/templates/home/home_page.html
+++ b/main/templates/home/home_page.html
@@ -43,57 +43,18 @@ table, th, td {
 -->
 
 <div class="container-md" style="padding-top: 30px;">
-
-
   <h3>Academic Smart Assistant</h3>
   <div class="p-2">
-    <form method="post", action="{% url 'traverse' %}">
-      {% csrf_token %}
-      <h4>Department</h4>
-      <select name="department" class="form-control col-9" title="" id="id_department">
-        <option value="" selected disabled hidden>Choose a department</option>
-      {% for departments in showDepartments %}
-        <option value="{{ departments.pk }}">{{ departments.name}}</option>
-      {% endfor %}
-      </select>
-      <br>
-      <h4>Degree Program</h4>
-      <select name="degree-program" class="form-control col-9" title="" id="id_degree-program">
-        <option value="" selected disabled hidden>Choose degree program</option>
-      {% for degreePrograms in showDegrees %}
-        <option value="">{{ degreePrograms.name}}</option>
-      {% endfor %}
-      </select>
-      <br>
-      <ul class="list-group">  
-        {% buttons %}
-        <input type="submit" name="historical_woptions" class="btn btn-primary" value = "View Historical Data"></input>
-        <br><br>
-        <input type="submit" name="comparisons_woptions" class="btn btn-primary" value = "View Degree Program Comparisons"></input>
-        <br><br>
-        <input type="submit" name="smart_woptions" class="btn btn-primary" href="smartAssistant" value = "Feedback Smart Assistant"></input>
-        {% endbuttons %}
-      </ul>
-    </form>
+    <ul class="list-group">  
+      {% buttons %}
+      <a type="submit" name="historical_woptions" class="btn btn-primary" href="/historical" value = "View Historical Data">View Historical Data</a>
+      <br><br>
+      <a type="submit" name="comparisons_woptions" class="btn btn-primary" href="/degree_comparison" value = "View Degree Program Comparisons">View Degree Program Comparisons</a>
+      <br><br>
+      <a type="submit" name="smart_woptions" class="btn btn-primary" href="/smart_assistant" value = "Feedback Smart Assistant">Feedback Smart Assistant</a>
+      {% endbuttons %}
+    </ul>
   </div>
-
 </div>
-{% endblock %}
-{% block endscripts %}
-<script>
-  var dept = $("#id_department")
-  dept.change(function () {
-     // var degreeName = dept[0].options[dept[0].selectedIndex].text;
-      var degreeName = dept.val()
-      $.ajax({
-        url: "/degreeDropdown",
-        data: {
-          'department': degreeName
-        },
-        success: function (data) {
-          $("#id_degree-program").html(data);
-        }
-      });
-    });
-</script>
+
 {% endblock %}
