--- a/main/templates/reports/historical_report.html
+++ b/main/templates/reports/historical_report.html
@@ -91,6 +91,15 @@
           </ul>
         </div>
       </form>
+      <!-- May incorporate this in the future for warnings
+        {% if messages %}
+        <div class="alert alert-danger" role="alert">
+          {% for message in messages%}
+            {{ message }}
+          {% endfor %}
+        </div>
+        {% endif %}
+      -->
 
       
     </div>
