--- a/main/templates/smart_assistant/smart_assistant.html
+++ b/main/templates/smart_assistant/smart_assistant.html
@@ -61,8 +61,8 @@
       </tr>
       {% for slo in showSLOs %}
       <tr>
-          <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.0 }}</td>
-          <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.1 }}</td>
+          <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.goal_text }}</td>
+          <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.bloom_taxonomy }}</td>
       </tr>
       {% endfor %}
     </table>
