Tokenization of SLO

--- a/main/templates/smart_assistant/smart_assistant.html
+++ b/main/templates/smart_assistant/smart_assistant.html
@@ -62,7 +62,7 @@
       {% for slo in showSLOs %}
       <tr>
           <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.goal_text }}</td>
-          <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.bloom_taxonomy }}</td>
+          <td style="border: 3px; border-style:solid; border-color: black; padding: 1em;">{{ slo.feedback }}</td>
       </tr>
       {% endfor %}
     </table>
