--- a/main/templates/smart_assistant/smart_assistant.html
+++ b/main/templates/smart_assistant/smart_assistant.html
@@ -53,7 +53,7 @@
   </form>
 
     {% if showSLOs %}
-    <table style="width:100%">
+    <table id = table style="width:100%">
 
       <tr>
           <th>SLO</th>
